--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header {
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;  
-    background-image: linear-gradient(to top, rgb(11, 58, 36), rgb(17, 219, 118));}   
+    background-image: linear-gradient(to top, rgb(4 121 79), rgb(196, 199, 240));
     
 }
 
