--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header {
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;  
-    background-image: linear-gradient(to top, rgb(4 121 79), rgb(196, 199, 240));
+    background-image: linear-gradient (to top, #3ddc84, rgb(196, 199, 240));
     
 }
 
